--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -12,18 +12,11 @@ body{
 footer{
   background: #140B5C;
   width: 100%;
+  height: 100%;
   bottom: 0;
   left: 0;
 }
-footer::before{
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 100px;
-  height: 1px;
-  width: 100%;
-  background: #AFAFB6;
-}
+
 footer .content{
   max-width: 1250px;
   margin: auto;
